<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none"
    android:background="@drawable/background_login"
    >
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <!-- padding 内边距   layout_margin 外边距
                android:layout_alignParentTop 布局的位置是否处于顶部 -->
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:padding="15dip"
            android:layout_margin="15dip"
            android:layout_weight="1"
            >

            <TextView  android:id="@+id/hello"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#888"
                android:textSize="25sp"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            >
            <RelativeLayout
                android:id="@+id/login_div"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="15dip"
                android:layout_margin="15dip"
                android:background="@drawable/background_login_div_bg"
                android:layout_weight="2"
                >

                <com.fhmou.tools.CleanableEditText
                    android:id="@+id/username_edit"
                    android:layout_marginTop="60dp"
                    android:layout_width="fill_parent"
                    android:background="@drawable/login_edittext_bg"
                    android:drawableLeft="@drawable/icon_user"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:singleLine="true"
                    android:drawableRight="@drawable/delete_selector"
                    android:hint="输入邮箱"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>


                <com.fhmou.tools.CleanableEditText
                    android:id="@+id/password_edit"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="10dip"
                    android:drawableLeft="@drawable/account_icon"
                    android:hint="输入密码"
                    android:singleLine="true"
                    android:password="true"
                    android:drawableRight="@drawable/delete_selector"
                    android:background="@drawable/login_edittext_bg"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/username_edit"
                    />
                <!-- 登录button -->

                <Button
                    android:id="@+id/signin_button"
                    android:layout_marginTop="10dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_edit"
                    android:layout_alignRight="@id/password_edit"
                    android:text="@string/login_label_signin"
                    android:background="@drawable/blue_selector"
                    />
                <!-- 注册button -->
                <Button
                    android:layout_marginTop="10dip"
                    android:id="@+id/signup_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_edit"
                    android:layout_alignLeft="@id/password_edit"
                    android:text="@string/login_label_signup"
                    android:background="@drawable/blue_selector"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>